<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rjmoseley.beerator.app.BeerListActivity" >

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh"/>

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_new"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="90"
        android:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
