<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:layout_margin="6dp">

        <TextView android:id="@+id/tvBrewery"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/brewery_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView android:id="@+id/breweryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp">

        <TextView android:id="@+id/tvBeer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/beer_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView android:id="@+id/beerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp">

        <TextView android:id="@+id/tvABV"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/abv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView android:id="@+id/abv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp">

        <TextView android:id="@+id/ratings"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout android:id="@+id/ratingLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp">

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:id="@+id/numberPicker1" />
            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:id="@+id/numberPicker2" />

            <Button android:id="@+id/rateBeerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rate_beer"
                android:onClick="rateBeerOnClick"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

        <ProgressBar android:id="@+id/loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/loadRatingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="6dp">

        <Button android:id="@+id/loadRatings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/load_ratings"
            android:onClick="loadRatingsOnClick" />

    </LinearLayout>

</LinearLayout>